Fix bootstrap collapsable menu

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,6 +80,7 @@ body {
 }
 
 .section-title, .sub-title {
+  text-align: center;
   font-family: var(--main-font);
   color: var(--highlight-color);
 }
